# agentic-android

./: .env.example  .gitignore  LICENSE  README.md  agentic-android.toml  agentic-android.toml.example  pyproject.toml  requirements.txt  run.bat  run.sh
agentic_android/: __init__.py  __main__.py  adb.py  agent.py  brains.py  chat.py  config.py  debuglog.py  device.py  doctor.py  guardrails.py  mcp_server.py  skills.py  tools.py  triggers.py  ui.py
