[project]
name = "agentic-android"
version = "0.1.0"
description = "Drive an Android device with any LLM (Claude, OpenAI, Ollama, LM Studio) over ADB + uiautomator."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bhavik Patel" }]
requires-python = ">=3.10"
dependencies = ["adbutils>=2.0", "mcp>=1.0", "defusedxml>=0.7"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.69"]                 # provider = "anthropic"
openai = ["openai>=1.40"]                       # provider = "openai"
full = ["anthropic>=0.69", "openai>=1.40", "Pillow>=10.0", "python-dotenv>=1.0"]

[project.scripts]
agentic-android = "agentic_android.__main__:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentic_android"]
